<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_serial_monitor"
            android:icon="@drawable/ic_serial"
            android:title="@string/menu_serial_monitor" />
        
        <item
            android:id="@+id/nav_boards_manager"
            android:icon="@drawable/ic_boards"
            android:title="@string/menu_boards_manager" />
        
        <item
            android:id="@+id/nav_library_manager"
            android:icon="@drawable/ic_library"
            android:title="@string/menu_library_manager" />
        
        <item
            android:id="@+id/nav_file_picker"
            android:icon="@drawable/ic_file"
            android:title="File Picker" />
    </group>
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logic_analyzer"
            android:icon="@drawable/ic_logic_analyzer"
            android:title="@string/menu_logic_analyzer" />
        
        <item
            android:id="@+id/nav_multi_programmer"
            android:icon="@drawable/ic_multi_programmer"
            android:title="@string/menu_multi_programmer" />
    </group>
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>