<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">
    
    <fragment
        android:id="@+id/nav_home"
        android:name="com.arduinomobileworkshop.app.ui.MainActivity"
        android:label="Home" />
    
    <activity
        android:id="@+id/nav_serial_monitor"
        android:name="com.arduinomobileworkshop.app.ui.SerialMonitorActivity"
        android:label="@string/menu_serial_monitor" />
    
    <activity
        android:id="@+id/nav_boards_manager"
        android:name="com.arduinomobileworkshop.app.ui.BoardsManagerActivity"
        android:label="@string/menu_boards_manager" />
    
    <activity
        android:id="@+id/nav_library_manager"
        android:name="com.arduinomobileworkshop.app.ui.LibraryManagerActivity"
        android:label="@string/menu_library_manager" />
    
    <activity
        android:id="@+id/nav_settings"
        android:name="com.arduinomobileworkshop.app.ui.SettingsActivity"
        android:label="@string/menu_settings" />
    
    <activity
        android:id="@+id/nav_file_picker"
        android:name="com.arduinomobileworkshop.app.ui.FilePickerActivity"
        android:label="File Picker" />
    
    <activity
        android:id="@+id/nav_logic_analyzer"
        android:name="com.arduinomobileworkshop.app.ui.LogicAnalyzerActivity"
        android:label="@string/menu_logic_analyzer" />
    
    <activity
        android:id="@+id/nav_multi_programmer"
        android:name="com.arduinomobileworkshop.app.ui.MultiProgrammerActivity"
        android:label="@string/menu_multi_programmer" />
    
</navigation>